fix overflow and links

--- a/src/styles/instruments.css
+++ b/src/styles/instruments.css
@@ -53,7 +53,6 @@
     max-width: 100%;
     display: flex;
     flex-direction: column;
-    cursor: pointer;
     position: relative;
     transform: translateY(50px) scale(0.8);
     transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
